Fixes overlapping with coin and powerups

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -79,14 +79,6 @@ button {
 }
 
 /*
-    Coin
- */
-
-#coin {
-    z-index: 200;
-}
-
-/*
     Highscore table
  */
 .highscore-cont {
